<resources>
    <string name="app_name">Frutaspiga</string>
    <string name="empezar">Start</string>
    <string name="noche">Night</string>
    <string name="dia">Day</string>
    <string name="tema">Theme</string>
    <string name="salir">Exit</string>
    <string name="entrarCliente">Log in client</string>
    <string name="entrarEmpresa">Log in bussines</string>
    <string name="usuario">Email</string>
    <string name="contrasinal">Password</string>
    <string name="entrar">Go</string>
    <string name="mostrarc">View password</string>
    <string name="nuevoUsuario">New user</string>
    <string name="nuevonombre">Name</string>
    <string name="repetirContrasinal">Repeat password</string>
    <string name="registrar">Register</string>
    <string name="numerotelefon">Number</string>
    <string name="BIENVENIDO">WELCOME</string>
    <string name="mantener">PRESS AND HOLD TO START THE APPLICATION</string>
    <string name="iniciar">Log in</string>
    <string name="recordar">Remember credentials</string>
    <string name="fruteriasdisponibles">Fruit shops available</string>
    <string name="seguro">Are you sure you want to go out?</string>


</resources>