<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="@dimen/cabeceras"
        android:text="@string/nuevoUsuario"
        />
    <EditText
        android:id="@+id/editnuevoNombre"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginbtnlogin"
        android:hint="@string/nuevonombre"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/editnuevoEmail"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginbtnlogin"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/editnuevoContrasinal"
        android:layout_margin="@dimen/marginbtnlogin"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contrasinal"
        />
    <EditText
        android:id="@+id/editrepetirContrasinal"
        android:layout_margin="@dimen/marginbtnlogin"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repetirContrasinal"
        />
    <EditText
        android:id="@+id/edittelefono"
        android:layout_margin="@dimen/marginbtnlogin"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/numerotelefon"
        />
    <CheckBox
        android:id="@+id/chknverc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mostrarc"/>
        <Button
            android:layout_margin="@dimen/marginbtn"
            android:id="@+id/btnRegistrar"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:onClick="registrar"
            />


</LinearLayout>