<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<TextView
    android:id="@+id/txtCabeceraLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:textSize="@dimen/cabeceras"
    android:text="Iniciar sesion"
    android:textStyle="bold"
    />
    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/editContrasinal"
        android:layout_margin="15dp"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contrasinal"
        />
    <CheckBox
        android:id="@+id/chkverc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mostrarc"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:layout_margin="@dimen/marginbtnlogin"
        android:id="@+id/btnEntrar"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:onClick="entrarGo"
        />
    <Button
        android:layout_margin="@dimen/marginbtnlogin"
        android:id="@+id/btnNuevo"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/nuevoUsuario"
        android:onClick="entrarGo"
        android:enabled="false"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</LinearLayout>
</LinearLayout>